--- a/packages/runner/package.json
+++ b/packages/runner/package.json
@@ -30,6 +30,7 @@
     "@loki/diff-graphics-magick": "^0.28.0",
     "@loki/diff-looks-same": "^0.28.0",
     "@loki/diff-pixelmatch": "^0.28.0",
+    "@loki/diff-odiff": "^0.28.0",
     "@loki/target-chrome-app": "^0.28.0",
     "@loki/target-chrome-aws-lambda": "^0.28.0",
     "@loki/target-chrome-docker": "^0.28.1",
