--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.28.1",
+  "version": "0.28.2-odiff.0",
   "useWorkspaces": true,
   "registry": "https://registry.npmjs.org",
   "npmClient": "yarn"
