--- a/packages/loki/package.json
+++ b/packages/loki/package.json
@@ -1,6 +1,6 @@
 {
   "name": "loki",
-  "version": "0.28.1",
+  "version": "0.28.2-odiff.0",
   "description": "Visual Regression Testing for Storybook",
   "bin": {
     "loki": "bin/loki"
@@ -47,7 +47,7 @@
     "@loki/integration-react": "^0.28.0",
     "@loki/integration-react-native": "^0.28.0",
     "@loki/integration-vue": "^0.28.0",
-    "@loki/runner": "^0.28.1",
+    "@loki/runner": "^0.28.2-odiff.0",
     "@loki/target-chrome-app": "^0.28.0",
     "@loki/target-chrome-docker": "^0.28.1",
     "@loki/target-native-android-emulator": "^0.28.0",
