--- a/lerna.json
+++ b/lerna.json
@@ -2,5 +2,10 @@
   "version": "0.28.2-odiff.0",
   "useWorkspaces": true,
   "registry": "https://registry.npmjs.org",
-  "npmClient": "yarn"
+  "npmClient": "yarn",
+  "command": {
+    "publish": {
+      "registry": "http://localhost:4873/"
+    }
+  }
 }
